fix main navbar overflow

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -93,7 +93,7 @@
 }
 
 .slide-out {
-    animation: slideOutRight 0.3s forwards;
+    animation: slideOutRight 1s forwards;
 }
 
 .fade-in {
@@ -107,7 +107,7 @@
 
 @keyframes slideInRight {
     0% {
-      transform: translateX(500px);
+      transform: translateX(calc(100vw - 5px));
     }
     100% {
       transform: translateX(0);
@@ -119,7 +119,7 @@
       transform: translateX(0);
     }
     100% {
-      transform: translateX(500px);
+      transform: translateX(calc(100vw - 5px));
     }
 }
 
